Testsuite/ManualTests/2742/2742.c.lcov
    1|       |/* Integer reductions.  */
    2|       |
    3|       |#define n 1000
    4|       |
    5|      1|int main(void) {
    6|      1|  int v1;
    7|      1|
    8|      1|#pragma acc parallel reduction(+:v1) private(v1) /* { dg-error "invalid private reduction" } */
    9|      1|  ;
   10|      1|#pragma acc parallel reduction(+:v1) firstprivate(v1) /* { dg-error "invalid private reduction" } */
   11|      1|  ;
   12|      1|
   13|      1|  return 0;
   14|      1|}

